--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,40 @@
-h1{
-    color: red;
+/* Geral */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Helvetica, sans-serif;
+}
+body{
+    background-color: #FAFAFA;
+}
+
+/* Containers */
+
+#main-container{
+    display: flex;
+    margin-top: 30px;
+}
+#banner-container,
+#form-container{
+    flex:  1 1 0;
+    width: 50%;
+
+}
+#banner-container{
+    text-align: right;
+
+}
+#banner-container img{
+   
+    margin-right: 15px;
+    margin-top: 25px;
+    max-width: 380px;
+}
+#form-container {
+    text-align: right;
+}
+#form-box{
+    background-color: #FFFFFF;
+    border:  1px solid #DBDBDB;
 }
